crowi/elasticsearch-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch
spec:
  selector:
    matchLabels:
      app: elasticsearch
  serviceName: elasticsearch
  replicas: 0
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      securityContext:
        fsGroup: 1000
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - las211.tokyotech.org
              weight: 1
      containers:
        - name: elasticsearch
          image: ghcr.io/traptitech/es-with-sudachi-crowi:6.8.9-2.1.0
          ports:
            - name: http
              containerPort: 9200
          volumeMounts:
            - mountPath: /usr/share/elasticsearch/data
              name: data
          resources:
            requests:
              cpu: "50m"
              memory: "500Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
        - name: exporter
          image: quay.io/prometheuscommunity/elasticsearch-exporter:v1.11.0
          args:
            - --es.uri=http://localhost:9200
            - --es.all
            - --es.indices
            - --es.shards
          ports:
            - name: exporter
              containerPort: 9114
          resources:
            requests:
              cpu: "10m"
              memory: "20Mi"
            limits:
              cpu: "100m"
              memory: "50Mi"
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: longhorn
        resources:
          requests:
            storage: 10Gi
