crowi/es-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: es

spec:
  serviceName: es
  replicas: 1
  podManagementPolicy: Parallel
  revisionHistoryLimit: 0

  selector:
    matchLabels:
      app: es

  template:
    metadata:
      labels:
        app: es
    spec:
      enableServiceLinks: false
      nodeSelector:
        kubernetes.io/hostname: c1-203.tokyotech.org

      volumes:
        - name: data
          hostPath:
            path: /opt/elasticsearch/crowi-data
            type: DirectoryOrCreate
      containers:
        - name: es
          image: ghcr.io/traptitech/es-with-sudachi-crowi:6.8.9-2.1.0
          ports:
            # For compatibility with the old infrastructure.
            # TODO: Remove the old host port exposure.
            - name: es
              containerPort: 9200
              hostIP: 192.168.0.13
              hostPort: 9202
          volumeMounts:
            - mountPath: /usr/share/elasticsearch/data
              name: data
          resources:
            requests:
              cpu: "50m"
              memory: "500Mi"
            limits:
              cpu: "1"
              memory: "1Gi"

        - name: exporter
          image: quay.io/prometheuscommunity/elasticsearch-exporter:v1.11.0
          args:
            - --es.uri=http://localhost:9200
            - --es.all
            - --es.indices
            - --es.shards
          ports:
            - name: exporter
              containerPort: 9114
          resources:
            requests:
              cpu: "10m"
              memory: "20Mi"
            limits:
              cpu: "100m"
              memory: "50Mi"
