crowi/es-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: es
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9114"

spec:
  type: ClusterIP
  selector:
    app: es
  ports:
    - name: es
      port: 9200
      targetPort: es
    - name: exporter
      port: 9114
      targetPort: exporter
