crowi/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crowi-mongo
spec:
  selector:
    app: crowi-mongo
  ports:
    - name: db
      port: 27017
      targetPort: db
